--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -60,7 +60,11 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                <li><a id="pruebas" href="#">Pruebas server</a></li>
+                <li><a id="pruebas" href="#">Coloca el evento</a></li>
+                <li><a id="suma" href="#">Lanzalo</a></li>
+                <li><a id="evento" href="#">Esto no es nada</a></li>
+
+
                 <li><a id="save" href="#">Save</a></li>
                 <li>
                     <a id="addDash" href="#"><i class="fa fa-fw fa-edit"></i> Add Dashboard</a>
