--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -60,14 +60,15 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                <li><a id="pruebas" href="#">Coloca el evento</a></li>
-                <li><a id="suma" href="#">Lanzalo</a></li>
-                <li><a id="evento" href="#">Esto no es nada</a></li>
+                <li><a id="pruebas" href="javascript:void(0)">Coloca el evento</a></li>
+                <li><a id="suma" href="javascript:void(0)">Lanzalo</a></li>
+                <li><a id="evento" href="javascript:void(0)">Esto no es nada</a></li>
+                <li><a id="borra" href="javascript:void(0)">Borra el evento</a></li>
 
 
-                <li><a id="save" href="#">Save</a></li>
+                <li><a id="save" href="javascript:void(0)">Save</a></li>
                 <li>
-                    <a id="addDash" href="#"><i class="fa fa-fw fa-edit"></i> Add Dashboard</a>
+                    <a id="addDash" href="javascript:void(0)"><i class="fa fa-fw fa-edit"></i> Add Dashboard</a>
                 </li>
             </ul>
             <a class="navbar-brand" style="right">Make Graphics</a>
