--- a/dashboards/templates/pruebas.html
+++ b/dashboards/templates/pruebas.html
@@ -18,6 +18,8 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="css/custom.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
 
@@ -36,11 +38,9 @@
 
         <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
-    <script src="js/dashboard.js"></script>
         <!--Gridster-->
     <script src="js/jquery.gridster.js"></script>
-
+    <script src="js/jquery-ui.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -49,21 +49,27 @@
 
     <script src="Highcharts/js/highcharts.js"></script>
     <script src="chartmaster/Chart.js"></script>
-
+    <script>
+        $(function() {
+          $( "#draggable" ).draggable();
+        });
+    </script>
 </head>
 
 <body>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Creating</h3>
-        </div>
-        <div class="panel-body">
-            <ul>
-                <p><button type="button" class="btn btn-xs btn-default">Time series chart</button></p>
-                <p><button type="button" class="btn btn-xs btn-default">Aging chart</button></p>
-                <p><button type="button" class="btn btn-xs btn-default">Info widget</button></p>
-            </ul>
+    <div id="dialog" title="Basic dialog">
+    <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+    </div>
+
+    <div id="draggable">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Maker menu</h3>
+            </div>
+            <div id="conten" class="panel-body">
+                
+            </div>
         </div>
     </div>
 
