--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -38,10 +38,16 @@
         <!-- jQuery -->
     <script src="/templates/js/jquery.js"></script>
 
+        <!--Dashboard-->
     <script src="/templates/js/dashboard.js"></script>
+
+        <!--Objects of widgets-->
+    <script src="/templates/js/widgets.js"></script>
+
         <!--Gridster-->
     <script src="/templates/js/jquery.gridster.js"></script>
 
+        <!--Jquery UI-->
     <script src="/templates/js/jquery-ui.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
