--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -84,7 +84,7 @@
 
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul id="dashboards" class="nav navbar-nav side-nav">                    
+                <ul id="panels" class="nav navbar-nav side-nav">                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
