Empezado orientacion a objetos por paneles y objetos widget

--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -41,8 +41,12 @@
         <!--Dashboard-->
     <script src="/templates/js/dashboard.js"></script>
 
-        <!--Objects of widgets-->
-    <script src="/templates/js/widgets.js"></script>
+        <!--Object panel-->
+    <script src="/templates/js/panel.js"></script>
+    
+        <!--Objects widgets-->
+    <script src="/templates/js/widget.js"></script>
+    <script src="/templates/js/HighInfoWidget.js"></script>
 
         <!--Gridster-->
     <script src="/templates/js/jquery.gridster.js"></script>
