subido modo de creación de objetos widgets

--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -47,6 +47,8 @@
         <!--Objects widgets-->
     <script src="/templates/js/widget.js"></script>
     <script src="/templates/js/HighInfoWidget.js"></script>
+    <script src="/templates/js/HighDemoWidget.js"></script>
+    <script src="/templates/js/HighTimeWidget.js"></script>
 
         <!--Gridster-->
     <script src="/templates/js/jquery.gridster.js"></script>
