--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -62,6 +62,7 @@
     <!-- HIGTH CHARTS -->
 
     <script src="/templates/Highcharts/js/highcharts.js"></script>
+    <script src="/templates/Highcharts/js/modules/exporting.js"></script>
     <script src="/templates/chartmaster/Chart.js"></script>
 
     <script>
