Subido reajuste de la jerarquia

--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -46,6 +46,7 @@
     
         <!--Objects widgets-->
     <script src="/templates/js/widget.js"></script>
+    <script src="/templates/js/HighWidget.js"></script>
     <script src="/templates/js/HighInfoWidget.js"></script>
     <script src="/templates/js/HighDemoWidget.js"></script>
     <script src="/templates/js/HighTimeWidget.js"></script>
@@ -84,7 +85,7 @@
 
                 <li><a id="save" href="javascript:void(0)">Save</a></li>
                 <li>
-                    <a id="addDash" href="javascript:void(0)"><i class="fa fa-fw fa-edit"></i> Add Dashboard</a>
+                    <a id="addPanel" href="javascript:void(0)"><i class="fa fa-fw fa-edit"></i> Add Panel</a>
                 </li>
             </ul>
             <a class="navbar-brand" style="right">Make Graphics</a>
