Subidos ya todos los tipos de graficas de creacion funcional

--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -47,6 +47,7 @@
         <!--Objects widgets-->
     <script src="/templates/js/widget.js"></script>
     <script src="/templates/js/HighWidget.js"></script>
+    <script src="/templates/js/HighAutors.js"></script>
     <script src="/templates/js/HighInfoWidget.js"></script>
     <script src="/templates/js/HighDemoWidget.js"></script>
     <script src="/templates/js/HighTimeWidget.js"></script>
