--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -46,6 +46,7 @@
     
         <!--Objects widgets-->
     <script src="/templates/js/widget.js"></script>
+    <script src="/templates/js/VideoWidget.js"></script>
     <script src="/templates/js/HighWidget.js"></script>
     <script src="/templates/js/HighAutors.js"></script>
     <script src="/templates/js/HighInfoWidget.js"></script>
