Subido con un panel que no ocupa espacio para crear

--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -73,6 +73,8 @@
         $(function() {
           $( "#making" ).draggable();
           $( "#making" ).hide();
+          $( "#widgets" ).draggable();
+          $( "#widgets" ).hide();
         });
     </script>
 </head>
@@ -106,6 +108,16 @@
                     <h3 class="panel-title">Maker menu</h3>
                 </div>
                 <div id="conten" class="panel-body">
+                    
+                </div>
+            </div>
+        </div>
+        <div id="widgets">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Widgets</h3>
+                </div>
+                <div id="widgetButtons" class="panel-body">
                     
                 </div>
             </div>
