--- a/dashboards/templates/dashboard.html
+++ b/dashboards/templates/dashboard.html
@@ -19,8 +19,8 @@
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="static/css/sb-admin.css" rel="stylesheet">
     <link href="static/css/custom.css" rel="stylesheet">
+    <link href="static/css/sb-admin.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
     <link href="static/css/plugins/morris.css" rel="stylesheet">
@@ -66,7 +66,6 @@
     <!-- HIGTH CHARTS -->
 
     <script src="static/Highcharts/js/highcharts.js"></script>
-    <script src="static/Highcharts/js/modules/exporting.js"></script>
     <script src="static/chartmaster/Chart.js"></script>
 
     <script>
@@ -135,7 +134,7 @@
                 </div>
             </div>
         </div>
-        <div id="page-wrapper">
+        <div id="page-wrapper" class="drawZone">
 
             <div class="container-fluid">
                 
