--- a/dashboards/templates/index.html
+++ b/dashboards/templates/index.html
@@ -76,6 +76,10 @@
           $( "#widgets" ).hide();
           $( "#companies" ).draggable();
           $( "#companies" ).hide();
+          $( "#panelMaker" ).draggable();
+          $( "#panelMaker" ).hide();
+          $( "#panelSettings" ).draggable();
+          $( "#panelSettings" ).hide();
         });
     </script>
 </head>
@@ -89,14 +93,14 @@
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
 
-                <li><a id="configurationCompanies" href="javascript:void(0)">Configuration Companies</a></li>
+             
                 <li><a id="save" href="javascript:void(0)">Save</a></li>
                 <li>
                     <a id="addPanel" href="javascript:void(0)"><i class="fa fa-fw fa-edit"></i> Add Panel</a>
                 </li>
             </ul>
             <input type="text" style="background: transparent; border: none; color: #929999; margin-top: 10px; margin-left: 10px;font-size:22px" value="Make Graphics" id="titleApp">
-
+            <i id="activedPanel" style="color: #929999; font-size:22px"></i>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="panels" class="nav navbar-nav side-nav">                    
@@ -104,6 +108,26 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
+        <div id="panelSettings">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Settings panel</h3>
+                </div>
+                <div id="panelSettingsConten" class="panel-body">
+                    
+                </div>
+            </div>
+        </div>
+        <div id="panelMaker">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Maker panel</h3>
+                </div>
+                <div id="panelConten" class="panel-body">
+                    
+                </div>
+            </div>
+        </div>
         <div id="companies">
             <div class="panel panel-default">
                 <div class="panel-heading">
