--- a/dashboards/templates/index.html
+++ b/dashboards/templates/index.html
@@ -35,6 +35,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+        <!-- Undescore -->
+    <script src="static/js/underscore.js"></script>
+        <!-- Github -->
+    <script src="static/js/github.js"></script>
         <!-- jQuery -->
     <script src="static/js/jquery.js"></script>
 
